--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -18,5 +18,13 @@
   margin-top: 1.25rem;
   margin-bottom: .5rem;
   width: fit-content;
-  color: #b35858;
+  color: #da9a32;
+}
+
+sidebar .site-subtitle {
+  font-size: 95%;
+  color: #cad58b;
+  margin-top: .25rem;
+  word-spacing: 1px;
+  user-select: none;
 }
