added resume section

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -23,7 +23,7 @@
 
 sidebar .site-subtitle {
   font-size: 95%;
-  color: #c7b39a;
+  color: #dfdcee;
   margin-top: .25rem;
   word-spacing: 1px;
   user-select: none;
