--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -21,7 +21,7 @@
   color: #da9a32;
 }
 
-sidebar .site-subtitle {
+#sidebar .site-subtitle {
   font-size: 95%;
   color:#eada70;
   margin-top: .25rem;
